--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,8 @@
 @import "base/fonts";
 @import "base/reset";
 @import "base/style";
+@import "header/logo";
+@import "header/header";
+@import "header/burger";
+@import "components/init";
 @import "base/keyframes";
