--- a/resources/sass/base/_style.scss
+++ b/resources/sass/base/_style.scss
@@ -185,3 +185,23 @@ input[type="checkbox"]:checked {
     padding: 0 1.6rem;
   }
 }
+
+.section{
+  position: relative;
+}
+
+.tag{
+  display: inline-flex;
+  padding: 0.4rem 1.6rem;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
+  border-radius: 10rem;
+  background:  #049658;
+  color:#FFF;
+  font-family: "Noto Sans", sans-serif;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 168%;
+}
