--- a/resources/sass/header/_burger.scss
+++ b/resources/sass/header/_burger.scss
@@ -26,6 +26,7 @@
     width: 2.4rem;
     height: 2.4rem;
     padding: 5px 3px;
+    padding-top: 4px;
     display: flex;
     flex-direction: column;
     justify-content: center;
