--- a/resources/sass/base/_style.scss
+++ b/resources/sass/base/_style.scss
@@ -1,7 +1,7 @@
 html {
   font-size: 10px;
   @media (max-width: 1200px) {
-    //font-size: 9px;
+    font-size: 9px;
   }
   @media (max-width: 450px) {
     font-size: 10px;
