--- a/resources/sass/base/_style.scss
+++ b/resources/sass/base/_style.scss
@@ -188,6 +188,15 @@ input[type="checkbox"]:checked {
 
 .section{
   position: relative;
+  &-padding{
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+
+    @media (max-width: 1023px) {
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+    }
+  }
 }
 
 .tag{
@@ -204,4 +213,23 @@ input[type="checkbox"]:checked {
   font-style: normal;
   font-weight: 400;
   line-height: 168%;
+}
+
+
+.title{
+  &:not(:last-child){
+    margin-bottom: 4rem;
+    @media (max-width: 450px) {
+      margin-bottom: 2.4rem;
+    }
+  }
+  color:#FFF;
+  font-family: "Exo 2", sans-serif;
+  font-size: 5.4rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 114%;
+  @media (max-width: 450px) {
+    font-size: 2.4rem;
+  }
 }
