--- a/resources/sass/components/trends/_trends.scss
+++ b/resources/sass/components/trends/_trends.scss
@@ -1,12 +1,259 @@
-.trends{
-  &-row{
+.trends {
+  &-row {
     display: flex;
     gap: 1.6rem;
   }
-  &-table{
+
+  &-tabs {
+    &-content {
+      display: none;
+      &.active{
+        display: block;
+      }
+      border: 1px solid #282929;
+      background: #161818;
+      color: #FFF;
+      font-size: 1.6rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 165%;
+      text-align: center;
+      &-column {
+        width: 33.3%;
+        padding: 1.6rem 0.8rem;
+        vertical-align: middle;
+
+        &:first-child {
+          padding-left: 1.6rem;
+        }
+
+        &:last-child {
+          padding-right: 1.6rem;
+        }
+      }
+
+      &-row {
+        display: flex;
+        align-items: center;
+        &:not(:last-child){
+          border-bottom: 1px solid  #282929;
+        }
+
+      }
+    }
+
+    &-head {
+      display: flex;
+
+      &__item {
+        padding: 1.5rem 1rem;
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-bottom: 1px solid #282929;
+        background: rgba(39, 236, 152, 0);
+        gap: 0.8rem;
+        color: #A9ACAC;
+        font-family: "Exo 2", sans-serif;
+        font-size: 1.6rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 122%;
+
+        .icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 2rem;
+          height: 2rem;
+
+          svg {
+            path {
+              transition: 0.4s ease-in-out;
+              fill: #A9ACAC;
+            }
+          }
+        }
+
+        &:hover {
+
+          border-bottom: 1px solid rgba(#27EC98, 1);
+        }
+
+        &.active {
+          color: #27EC98;
+          border-bottom: 1px solid rgba(#27EC98, 1);
+          background: rgba(39, 236, 152, 0.1);
+
+          .icon {
+            svg {
+              path {
+                fill: #27EC98;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &-container {
+      width: calc(100% - 104rem);
+    }
+  }
+
+  &-table {
     width: 102.4rem;
+
+    &-button-container {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    &-change {
+      &.plus {
+        color: #27EC98;
+      }
+
+      &.minus {
+        color: #ED3C56;
+      }
+    }
+
+    &-coin {
+      display: flex;
+      gap: 1.2rem;
+      color: #A9ACAC;
+      font-family: "Noto Sans", sans-serif;
+      font-size: 1.4rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 168%;
+      text-align: left;
+
+      strong {
+        display: block;
+        font-size: 1.6rem;
+        color: #fff;
+      }
+
+      &__image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 5rem;
+        height: 5rem;
+        flex-shrink: 0;
+        flex-grow: 0;
+
+      }
+    }
+
+    &-search {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 9rem;
+      height: 100%;
+      transition: 0.2s ease-in-out;
+
+      button {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 2rem;
+        height: 2rem;
+        background: none;
+        border: none;
+        outline: none;
+        right: 1.6rem;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      label {
+        pointer-events: none;
+        position: absolute;
+        display: block;
+        margin: 0.5rem 1.6rem;
+        width: calc(100% - 3.2rem);
+        height: calc(100% - 1rem);
+      }
+
+      input {
+        opacity: 0;
+        padding: 1.7rem 1.6rem;
+        padding-right: 5rem;
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-bottom: 1px solid #FFF;
+        background: #1DA069;
+        color: #FFF;
+        font-family: "Exo 2", sans-serif;
+        font-size: 1.6rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 122%;
+        transition: 0.2s ease-in-out;
+      }
+
+      &.active {
+        width: 100%;
+
+        input {
+          opacity: 1;
+        }
+
+        label {
+          pointer-events: auto;
+        }
+      }
+    }
+
     table {
       width: 100%;
+
+      th, td {
+        padding: 1.6rem 0.8rem;
+        vertical-align: middle;
+
+        &:first-child {
+          padding-left: 1.6rem;
+        }
+
+        &:last-child {
+          padding-right: 1.6rem;
+        }
+      }
+
+      thead {
+        position: relative;
+        background: #049658;
+        color: #FFF;
+        font-family: "Exo 2", sans-serif;
+        font-size: 1.6rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 122%;
+        text-align: left;
+      }
+
+      tbody {
+        border-right: 1px solid #282929;
+        border-left: 1px solid #282929;
+        color: #FFF;
+        font-family: "Noto Sans", sans-serif;
+        font-size: 1.6rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 165%;
+
+        tr {
+          border-bottom: 1px solid #282929;
+        }
+      }
     }
   }
 }
