--- a/resources/sass/components/_init.scss
+++ b/resources/sass/components/_init.scss
@@ -2,3 +2,6 @@
 @import "head/head";
 @import "advantages/advantages";
 @import "trends/trends";
+@import "started/started";
+@import "about-account/_about-account";
+@import "portfolio/portfolio";
